[gd_scene load_steps=2 format=3 uid="uid://cg77ec2mbar1c"]

[ext_resource type="Script" path="res://mutiPlay/Game.gd" id="1_vb7xu"]

[node name="Game" type="Node2D"]
script = ExtResource("1_vb7xu")

[node name="Button" type="Button" parent="."]
offset_left = 472.0
offset_top = 150.0
offset_right = 674.0
offset_bottom = 257.0
text = "match_victory
"

[node name="MatchingVictoryTimer" type="Timer" parent="."]

[node name="isConnectingTimer" type="Timer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_enemy_info_pressed"]
[connection signal="timeout" from="MatchingVictoryTimer" to="." method="_isMatchingVictoryTimer"]
[connection signal="timeout" from="isConnectingTimer" to="." method="_isConnectingTimer"]
